--- a/templates/image.html
+++ b/templates/image.html
@@ -1,5 +1,8 @@
+$def with (image_url)
 <li class="span2">
  <a href="#" class="thumbnail">
-  <img src="http://eol.jsc.nasa.gov/sseop/images/thumb/ISS031/ISS031-E-30291.jpg" width="160" height="120" alt="" />
+  <img src="\
+$:image_url\
+" width="160" height="120" alt="" />
  </a>
 </li>
