--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
   <h2>Most Recent Images</h2>
 </div>
 <div class="row">
-  <div class="span12">
-  </div>
+    {% include "gallery.html" %}
 </div>
 {% endblock content %}
