--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
-    
+    <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+
     <title>{{ sitename }} &mdash; {{ title|safe }}</title>
   </head>
   <body>
