--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="page-header">
-  <h2>Most Recent Images</h2>
-</div>
 
-{% include "gallery.html" %}
+<div id="gallery">
+    <h2>Recent Images:</h2>
+    {% include "gallery.html" %}
+</div>
 
 {% endblock content %}
