--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic' rel='stylesheet' type='text/css'>
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 
     <title>{{ sitename }} &mdash; {{ title|safe }}</title>
