--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -3,35 +3,55 @@
   </div>
 </div>
 <div class="row">
-    <div id="loadermessage" class="span12 center" style="display:none;">
+    <div id="loadermessage" class="span12" style="display:none;">
         Loading More Images ...
     </div>
 </div>
 <script>
     var loading = true;
-    $('#loadermessage').show();
+    var i = 0;
+    var text = "Loading Images ";
+    var anime = function() {
+        $("#loadermessage").html(text+Array((++i)+1).join("."));
+        if (i > 6) i = 0;
+        console.log("animating");
+    };
+    var intervalid = null;
+
+    start_loading();
 
     $.post('loader.html', {"after": 0}, function(data) {
         $('#result').html(data);
-        $('#loadermessage').hide();
-        loading = false;
+        stop_loading();
+        text = "Loading More Images "
     });
 
-    function get_more() {
+    function start_loading() {
+        loading = true;
         $('#loadermessage').show();
+        intervalid = setInterval(anime, 200);
+    }
+
+    function stop_loading() {
+        loading = false;
+        $('#loadermessage').hide();
+        clearInterval(intervalid);
+        i = 0;
+    }
+
+    function get_more() {
+        start_loading();
         var lastimg = $('#result div').last().attr("id");
         console.log(lastimg);
         $.post('loader.html', {"after": lastimg}, function(data) {
             $('#result').append(data);
-            $('#loadermessage').hide();
-            loading = false;
+            stop_loading();
         });
     }
 
     $(window).scroll(function(){
         if  ($(window).scrollTop() == $(document).height() - $(window).height()){
             if (!loading) {
-                loading = true;
                 get_more();
             }
         }
