--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div id="gallery">
+<div id="section">
     <h2>Recent Images:</h2>
     {% include "gallery.html" %}
 </div>
