rethinking how I use redis

--- a/templates/about.html
+++ b/templates/about.html
@@ -28,6 +28,9 @@
       {% endfor %}
     </ul>
   </p>
+  <p>
+    Total Images on this website: {{ nphotos }}
+  </p>
   <p class="bump">
   </p>
 
