--- a/templates/loader.html
+++ b/templates/loader.html
@@ -3,5 +3,7 @@
     <img src="{{ img.url }}" class="img-rounded" />
   </div>
 {% else %}
-    <em>Unbelievable.  No entries here so far</em>
+  <div class="span12">
+    <em>No photos here so far</em>
+  </div>
 {% endfor %}
