--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,19 +58,22 @@ body {
     margin-bottom: 20px;
 }
 
-#content img {
-    margin-bottom: 20px;
-}
-
 #loadermessage {
     font-size: 1.3em;
     margin-top: 15px;
+}
+
+#result img {
+    display:inline-block;
+    height: 100px;
+    margin-bottom: 20px;
 }
 
 
 #footer {
     font-size: 0.8em;
     color: #999;
+    background: #000;
 }
 
 #footer hr {
