--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,11 @@ body {
     margin-bottom: 20px;
 }
 
+#content h3 {
+    font-size: 1.4em;
+    font-weight: normal;
+}
+
 #loadermessage {
     font-size: 1.3em;
     margin-top: 15px;
@@ -69,6 +74,21 @@ body {
     margin-bottom: 20px;
 }
 
+.modal {
+    display: none;
+    background: #222;
+    width: 640px;
+    padding: 20px 40px;
+}
+
+.modal h1 {
+    font-weight: normal;
+}
+
+.eolimage img {
+    min-height: 427px;
+    margin-bottom: 8px;
+}
 
 #footer {
     font-size: 0.8em;
