--- a/templates/loader.html
+++ b/templates/loader.html
@@ -9,6 +9,9 @@
   </div>
 {% else %}
   <div class="span12">
-    <em>No photos here so far</em>
+    <em>End of photo set</em>
+    <script>
+        allow_scroll = false;
+    </script>
   </div>
 {% endfor %}
