starting over on gallery page

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,47 +4,33 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/favicon.ico" />
-
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic' rel='stylesheet' type='text/css'>
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 
-    <title>{{ sitename }} &mdash; {{ title|safe }}</title>
+    <title>SpaceShots.org &mdash; {{ title|safe }}</title>
   </head>
   <body>
-    <div id="wrapper">
 
-      <div id="header">
-        <div class="container">
-          <h1>{{ sitename }} &mdash; {{ title|safe }}</h1>
-          <ul class="header-links pull-right">
+    <div id="header">
+      <div class="container">
+        <h1>SpaceShots.org&mdash; {{ title|safe }}</h1>
+        <ul class="header-links pull-right">
             {% for link in links %}
               <li><a href="{{ link.url}}">{{ link.title }}</a></li>
             {% endfor %}
-          </ul>
-          <hr />
-        </div>
+        </ul>
+        <hr>
       </div>
-      
-      <div id="content">
-        <div class="container">
-          {% block content %}{% endblock %}
-        </div>
-      </div>
-      
+    </div>
+
+    <div id="content">
+       {% block content %}{% endblock %}
     </div>
 
     <div id="footer">
-      <div class="container">
-        <hr />
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>made by <a href="http://twitter.com/natronics">@natronics</a> in the fabulous hipster paradise of Portland, Ore.</p>
-        <ul class="footer-links">
-          <li>view the <a href="https://github.com/natronics/EOL-Photos">source code of this site on github</a></li>
-          <li>images from <a href="http://eol.jsc.nasa.gov/">Image Science and Analysis Laboratory, NASA-Johnson Space Center</a></li>
-        </ul>
-      </div>
+        &nbsp;
     </div>
+
   </body>
 </html>
