--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,133 +1,15 @@
-html, body, #wrapper { height: 100%; margin: 0; padding: 0; }
-body > #wrapper { height: auto; min-height: 100%; }
-#content { padding-bottom: 100px; }
-#footer { clear: both; position: relative; z-index: 1000; height: 100px; margin-top: -116px; }
-
-
-a, a:hover {
-    color: #ace;
+#section ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-
-body {
-    background: #000 url('/static/img/background1.jpg') top left no-repeat;
-    color: #ddd;
+#section li {
+    padding: 0;
+    margin: 0;
+    padding-bottom: 25px;
 }
 
-
-.center {
-    text-align: center;
-}
-
-#header {
-    background: #000;
-    opacity: 0.8;
-    color: #fff;
-    padding-top: 15px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #222;
-}
-
-#header hr { display: none; }
-
-#header h1 {
-    font-size: 1.7em;
-    font-weight: normal;
-    font-family: 'Open Sans Condensed', sans-serif;
-    line-height: 10px;
-    padding-bottom: 10px;
-}
-
-#section {
-    background: #000;
-    color: #ccc;
-    padding: 50px 40px 40px 40px;
-    margin-left: -40px;
-    width: 960px;
-}
-
-.bump {
-    padding: 10px 0;
-}
-
-#content h2 {
-    font-size: 2.0em;
-    font-weight: normal;
-    font-family: 'Open Sans Condensed', sans-serif;
-    border-bottom: 1px solid #222;
-    margin-bottom: 20px;
-}
-
-#content h3 {
-    font-size: 1.4em;
-    font-weight: normal;
-}
-
-#content hr {
-    border-top: 1px solid #444;
-    border-bottom: 1px solid #222;
-}
-
-#loadermessage {
-    font-size: 1.3em;
-    margin-top: 15px;
-}
-
-#result img {
-    display:inline-block;
-    height: 100px;
-    margin-bottom: 20px;
-}
-
-.modal {
-    display: none;
-    background: #222;
-    width: 640px;
-    padding: 20px 40px;
-}
-
-.modal h1 {
-    font-weight: normal;
-}
-
-.eolimage img {
-    min-height: 427px;
-    margin-bottom: 8px;
-}
-
-#footer {
-    font-size: 0.8em;
-    color: #999;
-    background: #000;
-}
-
-#footer hr {
-    border-top: none;
-    border-bottom: 1px solid #333;
-}
-
-.header-links {
-	list-style: none;
-	margin:0;
-    margin-top: -20px;
-	padding:0;
-	margin-left: -10px;
-}
-
-.header-links li {
-	display: block;
-	float: left;
-	padding: 0 10px;
-}
-.footer-links {
-	list-style: none;
-	margin:0;
-	padding:0;
-	margin-left: -10px;
-}
-
-.footer-links li {
-	display: block;
-	float: left;
-	padding: 0 10px;
+h2 {
+    font-size: 16px;
 }
